[tool.poetry]
name = "talkingheads"
version = "0.5.0"
description = "A library to communicate with ChatGPT, Claude, Copilot, Gemini, HuggingChat, and Pi"
authors = ["Ugur Sahin <ugorsahin@tutanota.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.10.0"
undetected-chromedriver = "^3.5.3"
pandas = "^2.0.0"
easydict = "*"
validators = "^0.22.0"
filetype = "^1.2.0"
emoji = "^2.10.1"
PyYAML = "^6.0"
mergedeep = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
Source = "https://github.com/ugorsahin/TalkingHeads"
